--- a/index.html
+++ b/index.html
@@ -67,23 +67,24 @@
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">Basic Information</div>
+            <div class="h4 mt-0 title">Información Personal</div>
             <div class="row">
-              <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">24</div>
+              <!-- Write your comments here -->
+              <div class="col-sm-4"><strong class="text-uppercase">Nombre:</strong></div>
+              <div class="col-sm-8"><input type="text" maxlength="20" name="firstname" required></div>
             </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">anthony@company.com</div>
-            </div>
+                <div class="col-sm-4"><strong class="text-uppercase">Apellidos:</strong></div>
+                <div class="col-sm-8"><input type="text" maxlength="20" name="firstname" required></div>
+              </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+1718-111-0011</div>
-            </div>
+                <div class="col-sm-4"><strong class="text-uppercase">E-mail:</strong></div>
+                <div class="col-sm-8"><input type="text" maxlength="20" name="firstname" required></div>
+              </div>
             <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">140, City Center, New York, U.S.A</div>
-            </div>
+                <div class="col-sm-4"><strong class="text-uppercase">Teléfono:</strong></div>
+                <div class="col-sm-8"><input type="text" maxlength="20" name="firstname" required></div>
+              </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
               <div class="col-sm-8">English, German, French</div>
@@ -111,7 +112,7 @@
         <div class="control-group">
           <label class="control-label"> Ingrese el nombre de la habilidad </label>
           <div class="controls">
-            <input type="text" placeholder="Habilidad" size="30" id="habilidad" />
+            <input type="text" placeholder="Habilidad" size="30" id="habilidad" required />
           </div>
           <br>
           <label class="control-label"> Seleccione el nivel de la habilidad </label>
