--- a/index.html
+++ b/index.html
@@ -83,23 +83,24 @@
                 <div class="col-sm-4"><strong class="text-uppercase">Apellidos:</strong></div>
                 <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "su apellido aquí" id="apellidos" required>
                 <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="apellidos" required>Click para añadir apellidos</label> -->
-              <label type="label" id="lApellidos">lApellido</label></div>  
+              <label type="label" id="lApellidos"></label></div>  
               </div>
             <div class="row mt-3">
                 <div class="col-sm-4"><strong class="text-uppercase">E-mail:</strong></div>
                 <div class="col-sm-8"><input type="email" maxlength="20" placeholder = "su E-mail aquí" id="email" required>
                 <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="email" required>Click para añadir E-mail</label> -->
-                <label type="label" id="lEMail">lEMail</label></div>  
+                <label type="label" id="lEMail"></label></div>  
                 </div>
             <div class="row mt-3">
                 <div class="col-sm-4"><strong class="text-uppercase">Teléfono:</strong></div>
                 <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "su teléfono aquí" id="telefono" required>
                 <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
-                  <label type="label" id="lTelefono">lTelefono</label></div>  
+                  <label type="label" id="lTelefono"></label></div>  
               </div>
             <div class="row mt-3">
                 <!--<input type='button' value='Agregar información' id='infoButton' />-->
-                <button onclick="myFunction()">Enviar información</button>
+                <!--<button onclick="infoPersonal()" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" id="bInfoPersonal">Vista previa</button>-->
+                <a class="btn btn-primary" onclick="infoPersonal()"  id="bInfoPersonal">Vista previa</a>
               <!--<div class="col-sm-8"><input type="reset"></strong></div>-->
             </div>
           </div>
