Campo para resumen
-Se crea el área de texto para escribir el resumen, 300 caracteres permitidos
-Se agrega el favicon en el código

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
-
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" ></link>
 
@@ -64,9 +64,8 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
-            <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+              <div class="h4 mt-0 title">Resumen</div>
+            <textarea name="resumen" rows="8" cols="50" maxlength="300" id="resume"></textarea>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
