--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row mt-3">
                 <!--<input type='button' value='Agregar información' id='infoButton' />-->
                 <!--<button onclick="infoPersonal()" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" id="bInfoPersonal">Vista previa</button>-->
-                <a class="btn btn-primary" onclick="infoPersonal()"  id="bInfoPersonal">Vista previa</a>
+                <button type="submit" class="btn btn-primary" onclick="infoPersonal()"  id="bInfoPersonal">Vista previa</button>
               <!--<div class="col-sm-8"><input type="reset"></strong></div>-->
             </div>
           </div>
