--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
               <div class="h4 mt-0 title">Resumen</div>
-            <textarea name="resumen" rows="8" cols="50" maxlength="300" id="resume"></textarea>
+           <textarea rows="8" cols="50" maxlength="300" id="resumen" required></textarea> 
+            <label type="label" id="lResumen"></label>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
