Código de resumen documentado
Se documenta el código del html y del javascript correspondiente al resumen

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
+             <!-- Aqui el usuario escribe el resumen de su vida profesional, en un area de texto con maximo 300 caracteres -->
               <div class="h4 mt-0 title">Resumen</div>
            <textarea rows="8" cols="50" maxlength="300" id="resumen" required></textarea> 
             <label type="label" id="lResumen"></label>
