Placeholder de resumen

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="card-body">
              <!-- Aqui el usuario escribe el resumen de su vida profesional, en un area de texto con maximo 300 caracteres -->
               <div class="h4 mt-0 title">Resumen</div>
-           <textarea rows="8" cols="50" maxlength="300" id="resumen" required></textarea> 
+           <textarea rows="8" cols="50" maxlength="300" placeholder="Escriba aquí un resumen de su vida profesional" id="resumen" required></textarea> 
             <label type="label" id="lResumen"></label>
           </div>
         </div>
