--- a/index.html
+++ b/index.html
@@ -111,13 +111,14 @@
   </div>
 </div>
 
+<!-- Sección de Companias -->
 <div class="section" id="workPlaces">
   <div class="container">
     <div class="h4 text-center mb-4 title">Compañias para las que he trabajado</div>
       <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="works">
-                
+                <!-- Acá se genera el html de cada habilidad con javascript al usar el abbWork -->
         </div>
       </div>
       <div class="row">
@@ -132,6 +133,12 @@
           <div class="col-sm-8"><input type="text" maxlength="30" placeholder = "Nombre de la compañía aquí" id="nombreC" required>
           <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="apellidos" required>Click para añadir apellidos</label> -->
           <label type="label" id="lNombreC"></label></div>  
+      </div>
+      <div class="row mt-3">
+          <div class="col-sm-4"><strong class="text-uppercase">Ubicación:</strong></div>
+          <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Ubicación" id="ubicacion" required>
+          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
+          <label type="label" id="lUbicacion"></label></div>  
       </div>
       <div class="row mt-3">
           <div class="col-sm-4"><strong> Descripción del trabajo que realizaba: </strong> </div>
