--- a/index.html
+++ b/index.html
@@ -114,55 +114,56 @@
 <!-- Sección de Companias -->
 <div class="section" id="workPlaces">
   <div class="container">
-    <div class="h4 text-center mb-4 title">Compañias para las que he trabajado</div>
+    <div class="h4 text-center mb-4 title">Experiencia Laboral</div>
       <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
       <div class="card-body">
         <div class="works">
                 <!-- Acá se genera el html de cada habilidad con javascript al usar el abbWork -->
         </div>
-      </div>
-      <div class="row">
-        <!-- Write your comments here -->
-        <div class="col-sm-4"><strong class="text-uppercase">Título del puesto:</strong></div>
-        <div class="col-sm-8"><input type="text" maxlength="30" placeholder = "Título del puesto aquí" id="titulo" required>
-        <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="nombre" placeholder = "algo" required>Click para añadir nombre</label> -->
-        <label type="label" id="lTitulo"></label></div>
-      </div>
-      <div class="row mt-3">
-          <div class="col-sm-4"><strong class="text-uppercase">Nombre de la compañía:</strong></div>
-          <div class="col-sm-8"><input type="text" maxlength="30" placeholder = "Nombre de la compañía aquí" id="nombreC" required>
-          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="apellidos" required>Click para añadir apellidos</label> -->
-          <label type="label" id="lNombreC"></label></div>  
-      </div>
-      <div class="row mt-3">
-          <div class="col-sm-4"><strong class="text-uppercase">Ubicación:</strong></div>
-          <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Ubicación" id="ubicacion" required>
-          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
-          <label type="label" id="lUbicacion"></label></div>  
-      </div>
-      <div class="row mt-3">
-          <div class="col-sm-4"><strong> Descripción del trabajo que realizaba: </strong> </div>
-          <textarea rows="8" cols="50" maxlength="300" id="descirpcion" required></textarea> 
-          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="email" required>Click para añadir E-mail</label> -->
-          <label type="label" id="lDescripcion"></label>  
-      </div>
-      <div class="row mt-3">
-          <div class="col-sm-4"><strong class="text-uppercase">Fecha de inicio:</strong></div>
-          <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Fecha de inicio aquí" id="inicio" required>
-          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
-          <label type="label" id="linicio"></label></div>  
-      </div>
-      <div class="row mt-3">
-          <div class="col-sm-4"><strong class="text-uppercase">Fecha de finalización:</strong></div>
-          <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Fecha de final aquí" id="final" required>
-          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
-          <label type="label" id="lFinal"></label></div>  
-      </div>
-      <div class="row mt-3">
-          <!--<input type='button' value='Agregar información' id='infoButton' />-->
-          <!--<button onclick="infoPersonal()" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" id="bInfoPersonal">Vista previa</button>-->
-          <button type="submit" class="btn btn-primary" onclick="addWork()"  id="bInfoPersonal">Añadir</button>
-        <!--<div class="col-sm-8"><input type="reset"></strong></div>-->
+     
+        <div class="row">
+          <!-- Write your comments here -->
+          <div class="col-sm-4"><strong class="text-uppercase">Título del puesto:</strong></div>
+          <div class="col-sm-8"><input type="text" maxlength="30" placeholder = "Título del puesto aquí" id="titulo" required>
+          <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="nombre" placeholder = "algo" required>Click para añadir nombre</label> -->
+          <label type="label" id="lTitulo"></label></div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"><strong class="text-uppercase">Nombre de la compañía:</strong></div>
+            <div class="col-sm-8"><input type="text" maxlength="30" placeholder = "Nombre de la compañía aquí" id="nombreC" required>
+            <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="apellidos" required>Click para añadir apellidos</label> -->
+            <label type="label" id="lNombreC"></label></div>  
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"><strong class="text-uppercase">Ubicación:</strong></div>
+            <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Ubicación" id="ubicacion" required>
+            <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
+            <label type="label" id="lUbicacion"></label></div>  
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"><strong> Descripción del trabajo que realizaba: </strong> </div>
+            <textarea rows="8" cols="50" maxlength="300" id="descirpcion" required></textarea> 
+            <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="email" required>Click para añadir E-mail</label> -->
+            <label type="label" id="lDescripcion"></label>  
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"><strong class="text-uppercase">Fecha de inicio:</strong></div>
+            <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Fecha de inicio aquí" id="inicio" required>
+            <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
+            <label type="label" id="linicio"></label></div>  
+        </div>
+        <div class="row mt-3">
+            <div class="col-sm-4"><strong class="text-uppercase">Fecha de finalización:</strong></div>
+            <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "Fecha de final aquí" id="final" required>
+            <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
+            <label type="label" id="lFinal"></label></div>  
+        </div>
+        <div class="row mt-3">
+            <!--<input type='button' value='Agregar información' id='infoButton' />-->
+            <!--<button onclick="infoPersonal()" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" id="bInfoPersonal">Vista previa</button>-->
+            <button type="submit" class="btn btn-primary" onclick="addWork()"  id="bInfoPersonal">Añadir</button>
+          <!--<div class="col-sm-8"><input type="reset"></strong></div>-->
+        </div>
       </div>
     </div>
   </div>
