--- a/index.html
+++ b/index.html
@@ -43,10 +43,20 @@
 <div class="profile-page">
   <div class="wrapper">
     <div class="page-header page-header-small" filter-color="green">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div><!--IMAGEN BACKGROUND-->
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/avatar-default-icon.png" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/avatar-default-icon.png" alt="Image"/></a></div><!--IMAGEN FOTO-->
+          <!--<input type="file" name="fileupload" value="fileupload" id="fileupload"> 
+          <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> -->
+
+          <form action="upload.php" method="post" enctype="multipart/form-data">
+            Select image to upload:
+            <input type="file" name="fileToUpload" id="fileToUpload">
+            <input type="submit" value="Upload Image" name="submit">
+        </form>
+
+
           <div class="h2 title">Currículo</div>
           <!--<p class="category text-white">Web Developer, Graphic Designer,  Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
         </div>
