Habilidades con 2 columnas

--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@
       <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
         <div class="card-body">
           <div class="skills">
+              <div class="row">
                     <!-- Acá se genera el html de cada habilidad con javascript al usar el addbutton -->
+              </div>
           </div>
         </div>
       </div>
