Cambios a Centros Educativos

--- a/index.html
+++ b/index.html
@@ -236,22 +236,22 @@
           <div class="control-group">
             <label class="control-label"> Ingrese el nombre del centro educativo </label>
             <div class="controls">
-              <input type="text" placeholder="Centro Educativo" size="40" id="nombreCentroEducativo" value="Universidad de Costa Rica" required />
+              <input type="text" placeholder="Centro Educativo" size="40" id="nombreCentroEducativo"  required />
             </div>
             <br>
             <label class="control-label"> Ingrese la ubicación del centro educativo</label>
             <div class="controls">
-              <input type="text" placeholder="Ubicación del Centro Educativo" size="40" id="ubicacionCentroEducativo" value="San Pedro de Montes de Oca"  required />
+              <input type="text" placeholder="Ubicación del Centro Educativo" size="40" id="ubicacionCentroEducativo"   required />
             </div>
             <br>
             <label class="control-label"> Ingrese el título obtenido </label>
             <div class="controls">
-              <input type="text" placeholder="Título obtenido" size="40" id="tituloCentroEducativo" value="Doctorado en Ciencias de la Computación" required />
+              <input type="text" placeholder="Título obtenido" size="40" id="tituloCentroEducativo"  required />
             </div>
             <br>
             <label class="control-label"> Ingrese el año de inicio y de finalización </label>
             <div class="controls">
-              <input type="text" placeholder="  2001 - 2002,  2001 - Presente" size="30" id="fechasCentroEducativo" value="2001-2005" required />
+              <input type="text" placeholder="  2001 - 2002,  2001 - Presente" size="30" id="fechasCentroEducativo"  required />
             </div>
             <br>
            
