--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Acerca de mi</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#workPlaces">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Habilidades</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#seccionHabilidades">Habilidades</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#seccionCentrosEducativos">Educación</a></li>
+                
                 <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>-->
                 
                 <!--<li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>-->
