Error corregido de vista previa en referencias

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
          
       </div>
     
-      <div class="form-horizontal">
+      <div class="form-horizontal" id="seccionReferenciasEdicion">
 
         <table>
             <tr>
