Agregado Experiencia Laboral en Vista Previa

--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
              <!-- Aqui el usuario escribe el resumen de su vida profesional, en un area de texto con maximo 300 caracteres -->
-              <div class="h4 mt-0 title">Resumen</div>
+              <div class="h4 mt-0 title">Resumen</div> 
+             <!-- <div class="form-horizontal"  style="display: block;" id="seccionResumenEdicion"> -->
            <textarea rows="8" cols="50" maxlength="300" placeholder="Escriba aquí un resumen de su vida profesional" id="resumen" required></textarea> 
             <label type="label" id="lResumen"></label>
-          </div>
+			  </div>
+        <!--  </div> -->
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
@@ -143,7 +145,7 @@
         <div class="works">
                 <!-- Acá se genera el html de cada habilidad con javascript al usar el abbWork -->
         </div>
-     
+     <div class="form-horizontal"  style="display: block;" id="seccionExperienciaEdicion">
         <div class="row">
           <!-- Write your comments here -->
           <div class="col-sm-4"><strong class="text-uppercase">Título del puesto</strong></div>
@@ -189,6 +191,7 @@
         </div>
       </div>
     </div>
+	  </div>
   </div>
 </div>
 
