--- a/index.html
+++ b/index.html
@@ -89,17 +89,19 @@
           <div class="card-body">
              <!-- Aqui el usuario escribe el resumen de su vida profesional, en un area de texto con maximo 300 caracteres -->
               <div class="h4 mt-0 title">Resumen</div> 
-             <!-- <div class="form-horizontal"  style="display: block;" id="seccionResumenEdicion"> -->
+              <div class="form-horizontal"  style="display: block;" id="seccionResumenEdicion"> 
            <textarea rows="8" cols="50" maxlength="300" placeholder="Escriba aquí un resumen de su vida profesional" id="resumen" required></textarea> 
             <label type="label" id="lResumen"></label>
 			  </div>
-        <!--  </div> -->
+          </div> 
         </div>
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">Información Personal</div>
+            <div class="form-horizontal"  style="display: block;" id="seccionInfoPersonalEdicion"> 
             <div class="row">
               <!-- Write your comments here -->
+              
               <div class="col-sm-4"><strong class="text-uppercase">Nombre</strong></div>
               <div class="col-sm-8"><input type="text" maxlength="20" placeholder = "su nombre aquí" id="nombre" required>
               <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="nombre" placeholder = "algo" required>Click para añadir nombre</label> -->
@@ -123,14 +125,17 @@
                 <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="telefono" required>Click para añadir teléfono</label> -->
                   <label type="label" id="lTelefono"></label></div>  
               </div>
+              <div class="form-horizontal"  style="display: block;" id="botonInfoPersonalEdicion">
             <div class="row mt-3">
                 <!--<input type='button' value='Agregar información' id='infoButton' />-->
                 <!--<button onclick="infoPersonal()" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" id="bInfoPersonal">Vista previa</button>-->
-                <button type="submit" class="btn btn-primary" onclick="infoPersonal()"  id="bInfoPersonal">Vista previa</button>
+                <button type="submit" class="btn btn-primary" onclick="infoPersonal()"  id="bInfoPersonal">Guardar</button>
               <!--<div class="col-sm-8"><input type="reset"></strong></div>-->
             </div>
+			</div>
           </div>
         </div>
+		</div>
       </div>
     </div>
   </div>
