--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
               <label type="label" id="lApellidos"></label></div>  
               </div>
             <div class="row mt-3">
-                <div class="col-sm-4"><strong class="text-uppercase">E-mail</strong></div>
-                <div class="col-sm-8"><input type="email" maxlength="20" placeholder = "su E-mail aquí" id="email" required>
+                <div class="col-sm-4"><strong >e-MAIL</strong></div>
+                <div class="col-sm-8"><input type="email" maxlength="20" placeholder = "su e-mail aquí" id="email" required>
                 <!-- <div class="col-sm-8"><label type="label" maxlength="20"  contenteditable="true" id="email" required>Click para añadir E-mail</label> -->
                 <label type="label" id="lEMail"></label></div>  
                 </div>
