Error de botones flotantes

--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@
 
 <!-- Botones flotantes-->
 
-<!--<a href="#" class="float4" id="generarLink" onclick="generarLink()" style="display: none;" >
+<a href="#" class="float4" id="generarLink" onclick="generarLink()" style="display: none;" >
   <i class="fa fa-external-link my-float"></i>
   </a>
--->
+
 
 <a href="#" class="float3" id="modoEditar" onclick="modoEditar()" style="display: none;" >
   <i class="fa fa-pencil my-float"></i>
