--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="page-header-image" data-parallax="true" ></div><!--IMAGEN BACKGROUND style="background-image: url('images/cc-bg-1.jpg');"-->
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><!--<a href="#">--><!--<img src="images/avatar-default-icon.png" alt="Image"/>--></a></div><!--IMAGEN FOTO-->
+          <div class="cc-profile-image"><a href="#"><img src="images/avatar-default-icon.png" alt="Image"/></a></div><!--IMAGEN FOTO-->
           <!--<input type="file" name="fileupload" value="fileupload" id="fileupload"> 
           <label for="fileupload"> Select a file to upload</label> <input type="submit" value="submit"> -->
 
@@ -59,7 +59,13 @@
             Select image to upload:
             <input type="file" name="fileToUpload" id="fileToUpload">
             <input type="submit" value="Upload Image" name="submit">
-        </form>-->
+        </form> -->
+
+        <form action="upload.php" method="POST" enctype="multipart/form-data" action="upload.php">
+          Select image to upload:
+          <input type="file" name="file">
+          <input type="submit" value="Subir">
+      </form>
 
         
 
