Foto oculta al inicio. Problema con botón de subir foto que cambia posición

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
       <div class="page-header-image" data-parallax="true" ></div><!--IMAGEN BACKGROUND style="background-image: url('images/cc-bg-1.jpg');"-->
       <div class="container">
         <div class="content-center"><br><br><br><br><br><br>
-          <div class="cc-profile-image"><a href="#"><img src="images/foto.png" alt="Image"/></a></div><!--IMAGEN FOTO-->
+          <div class="cc-profile-image"><a href="#"><img /></a></div><!--IMAGEN FOTO-->
 
 
           <input type="file" onchange="previewFile()" id="carga" class="hide"/>
-          <label for="carga" class="btn btn-primary fa fa-plus" id="lCarga"></label><br/>
+          <label for="carga" class="btn btn-primary" id="lCarga">AÑADIR</label><br/>
           <img src="" height="200" alt="">
 
 
