Botón de foto queda en el mismo lugar luego de vista previa

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <div class="container">
         <div class="content-center"><br><br><br><br><br><br>
           <div class="cc-profile-image"><a href="#"><img /></a></div><!--IMAGEN FOTO-->
-
-
+          <div class="form-horizontal"  style="display: block;" id="foto">
+          
           <input type="file" onchange="previewFile()" id="carga" class="hide"/>
           <label for="carga" class="btn btn-primary" id="lCarga">AÑADIR</label><br/>
           <img src="" height="200" alt="">
 
-
+</div>
           <!--<input type="file" onchange="previewFile()" name="imageUpload" id="imageUpload" class="hide"/> 
             <label for="imageUpload" class="btn btn-primary">Select file</label><br/><br/><br/>
             <img src="" id="imagePreview" alt="Preview Image" width="200px"/> -->
